Fix HTML encoding issues in index04.html

--- a/index04.html
+++ b/index04.html
@@ -425,7 +425,7 @@
                 <h2>Cute Photo Of You According To Me </h2>
                 <div class="gallery">
                     <div class="gallery-item">
-                        <img src= kartik6.jpg  alt="adorable Picture">
+                        <img src= "kartik6.jpg"  alt="adorable Picture">
                     </div>
                     <div class="gallery-item">
                         <img src="kartik7.jpg" alt="cute even when child">
@@ -552,3 +552,4 @@
     </script>
 </body>
 </html>
+
